--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 discord.py==2.3.2
 Flask==3.0.0
-selenium==4.15.2
 psycopg2-binary==2.9.9
 geopy==2.4.1
-webdriver-manager==4.0.1
-googlemaps
+requests==2.31.0
