--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-discord.py==2.3.2
-Flask==3.0.0
-psycopg2-binary==2.9.9
-geopy==2.4.1
-requests==2.31.0
-selenium==4.15.2
+discord.py>=2.3.0
+playwright>=1.35.0
+asyncpg>=0.27.0
+python-dotenv>=1.0.0
